--- a/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.css
+++ b/Fundamentos/03-Bloco-Introducao_a_HTML_CSS/04-HTML_Semantico/shrimp.css
@@ -13,6 +13,7 @@ body {
     text-align: center;
     margin: auto;
     text-shadow: 4px 4px black;
+    position: relative;
 }
 
 .imagem-topo {
@@ -21,6 +22,7 @@ body {
     width: 100%;
     height: 380px;
     display: block;
+    
     
 }
 
@@ -47,6 +49,7 @@ li {
   font-family: 'comic neue', cursive; 
   margin: 4px 5px;
   cursor: pointer;
+  position: relative;
 }
 
 .button:hover {
@@ -72,8 +75,10 @@ section {
 .olhos {
     width: 300px;
     padding: 20px 20px;  
+    margin: 2px;
     position: absolute;
-    z-index: 1;  
+    z-index: 3;  
+    border-style: solid;
 }
 
 h2 {
@@ -85,7 +90,11 @@ h2 {
     position: absolute;
     z-index: 3;
     left: 100px;
-    top: 730px
+    top: 730px;    
+}
+
+#supervisao {
+    border-style: solid;
 }
 
 .balao {
@@ -95,4 +104,14 @@ h2 {
     position: absolute;
     z-index: 2;
     left:390px;
+}
+
+#supervisao-pg {
+    width: 250px;
+    position: absolute;
+    z-index: 4;
+    left: 458px;
+    top: 538px;
+    font-family: 'comic neue';
+    font-size: 20px;
 }
